# ml-tutorials

./: .gitignore  main.py  pyproject.toml
01.basic/: Ch1-Markdown.ipynb  Ch2-Python programming.ipynb  Ch3-Numpy.ipynb  Ch4-Pandas.ipynb  Ch5-Exercise1.ipynb  Ch6-Data visualization.ipynb  Ch7-Machine learning (기본이론).ipynb  Ch8-Machine learning (Clasification).ipynb  Ch9-Machine learning (Regression).ipynb
